# CApstone--AI-Triage

./: .env.example  .gitignore  ABHA_INTEGRATION_REVIEW.md  CLAUDE.md  CLINICAL_GUIDELINES.md  COMPETITOR_ANALYSIS.md  Dockerfile  LAUNCH_PLAN.md  MRD.md  PHASE2_IMPLEMENTATION_PLAN.md  PRD.md  PRD_COMPARISON.md  PRD_v1_symptom_triage.md  README.md  api.py  deploy.sh  index.html  install_deps.py  netlify.toml  pyproject.toml  railway.json  render.yaml  requirements-api.txt  requirements.txt  test_all_archetypes.py  test_api_all.py  test_api_triage.py  test_archetypes.py  test_batch_eval.py  test_phase4_e2e.py  test_triage.py
data/: generator.py
data/patients/: faltering_growth_000.json  faltering_growth_001.json  faltering_growth_002.json  high_risk_anc_000.json  high_risk_anc_001.json  high_risk_anc_002.json  missed_tb_fu_000.json  missed_tb_fu_001.json  missed_tb_fu_002.json  polypharmacy_elderly_000.json  polypharmacy_elderly_001.json  polypharmacy_elderly_002.json  uncontrolled_dm_000.json  uncontrolled_dm_001.json  uncontrolled_dm_002.json
engine/: __init__.py  abha_mock.py  merge.py  models.py  parser.py  summarizer.py  triage.py
eval/: checklist.py  run_eval.py
frontend/: netlify.toml  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AppShell.tsx  Chatbot.tsx  ClinicalSummaryPanel.tsx  DifferentialReviewPanel.tsx  FilterChips.tsx  (+7 more)
my-portfolio/: package-lock.json
supabase/: config.toml
supabase/migrations/: 20240101000000_initial_schema.sql
(+48 files in other folders)
